fix height of card on mobile screens

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ main {
     display: grid;
     grid-template-columns: 1fr clamp(320px, 40%, 350px) 1fr;
     row-gap: 10vh;
-    grid-template-rows: 0.4fr clamp(360px, 70%, 600px) 0.4fr;
+    grid-template-rows: 0.4fr clamp(360px, 75%, 600px) 0.4fr;
     grid-template-areas:
         '. . .'
         '. card .'
